
Version 1.0b7

- new idea to convert invalid grammar name
- fixed the default size of the preferences window that was too small
- fixed various end of line problem on Windows causing syntax coloring and debugger token highlighting to fail
- fixed a bug where an editor thread would not be stopped when a document was closed
- fixed a bug where the end of line pop-up menu in the debugger input dialog would be populated twice
- fixed a bug in the interpreter where the "guess" button would not work properly

Version 1.0b6 - 11/18/06

- added line endings preferences in debugger input text dialog and interpreter panel
- read now the token vocab file from the output path (in addition to the default grammar location)
- output path is now specified in the preferences
- alert after checking grammar
- added shift-delete to behave like delete when typing with the shift key pressed

- fixed a bug when storing strings greated than 8KB (it is now truncated and an alert is displayed)
- fixed a bug that prevented some DFA diagram from being completely displayed (scrollable zone too small)
- fixed a bug in the syntax coloring parser when a multi-line comment where located at the end of file
- fixed a bug where some menu items were not disabled in debug mode
- fixed a bug where AST node where not correctly added when a node became parent (nil node)
- fixed a bug where errors in the grammar where not reported when checking or generating the grammar

Version 1.0b5 - 10/22/06

- allow traversal of bundle on Mac OS X when choosing files
- fixed bug in syntax coloring with escape character
- plugin: now clear the read-only status

Version 1.0b4 - 09/28/06

- added menu shortcut for Generate Code
- fixed a bug where the tab settings were ignored in the editor
- fixed a bug that would prevent AW to run on Fedora Core 5

Version 1.0b3 - 09/13/06

- fixed a bug where checking the DOT tool existence would fail with white space in the path